--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       content="Portfolio of Karthik Surya, Software Engineer and AI Developer building intelligent agents, multi-agent systems, and RAG applications."
     />
     <meta name="twitter:image" content="https://nakarthiksurya.com/placeholder.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
